Fixed typo in config page

--- a/MediaPortalTVPlugin/Configuration/configPage.html
+++ b/MediaPortalTVPlugin/Configuration/configPage.html
@@ -19,7 +19,7 @@
                     <div class="inputContainer">
                         <input is="emby-input" id="txtApiPortNumber" name="txtApiPortNumber" label="Port number:" />
                         <div class="fieldDescription">
-                            The port number of the MP Extended Service
+                            The port number of the MPExtended Service
                         </div>
                     </div>
                     <label class="checkboxContainer">
@@ -177,7 +177,7 @@
                         <div class="collapseContent">
                             <label class="checkboxContainer">
                                 <input is="emby-checkbox" type="checkbox" id="chkEnableTimerCache" />
-                                <span>Enable caching of timers (60s)</span>
+                                <span>Enable caching of timers</span>
                             </label>
                             <label class="checkboxContainer">
                                 <input is="emby-checkbox" type="checkbox" id="chkEnableFFProbe" />
