--- a/MediaPortalTVPlugin/Configuration/configPage.html
+++ b/MediaPortalTVPlugin/Configuration/configPage.html
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                     <div>
-                        <button is="emby-button" type="button" id="saveAndTest" class="raised button-cancel block"><span>Save and Test Connection</span></button>
+                        <button is="emby-button" type="button" id="saveAndTest" class="raised button-cancel block"><span>Save Connection Settings</span></button>
                         <p id="connectionTestResult"></p>
                     </div>
                     <br />
@@ -258,7 +258,7 @@
                     loadSelects(config, page);
                     loadGenres(config, page);
 
-                    TestConnection();
+                    //TestConnection();
 
                     Dashboard.hideLoadingMsg();
                 });
