Warn users under Mono

--- a/MediaBrowser.Plugins.MediaPortal/Configuration/configPage.html
+++ b/MediaBrowser.Plugins.MediaPortal/Configuration/configPage.html
@@ -208,7 +208,9 @@
                         <div class="collapseContent">
                             <label class="checkboxContainer">
                                 <input is="emby-checkbox" type="checkbox" id="chkEnableImageProcessing" />
-                                <span>Enable custom image processing (Works best with transparent images that have the actual logo size)</span>
+                                <span>Enable custom image processing
+                                <br />(Works best with transparent images that have the actual logo size)
+                                <br />No functionality under .MONO installation like for Synology or some other linux distributions!</span>
                             </label>
                             <label class="checkboxContainer">
                                 <input is="emby-checkbox" type="checkbox" id="chkEnableLogging" />
