Updates to GenreMapper

--- a/MediaBrowser.Plugins.MediaPortal/Configuration/configPage.html
+++ b/MediaBrowser.Plugins.MediaPortal/Configuration/configPage.html
@@ -59,15 +59,15 @@
                                     Select the radio channel group you wish to use in Emby
                                 </div>
                             </div>
-                        </div>
-                    </div>
-
-                    <div is="emby-collapse" title="Program Options">
-                        <div class="collapseContent">
                             <label class="checkboxContainer">
                                 <input is="emby-checkbox" type="checkbox" id="chkProgramImages" />
                                 <span>Use channel logos as program images</span>
                             </label>
+                        </div>
+                    </div>
+
+                    <div is="emby-collapse" title="Program and Recording Category Options">
+                        <div class="collapseContent">
                             <p>List against each Emby category below, your MediaPortal program guide genres that belong to it</p>
                             <div class="inputContainer">
                                 <input is="emby-input" id="txtMovieGenre" name="txtMovieGenre" label="Movie genres:" />
@@ -78,7 +78,7 @@
                             <div class="inputContainer">
                                 <input is="emby-input" id="txtSeriesGenre" name="txtSeriesGenre" label="Series genres:" />
                                 <div class="fieldDescription">
-                                    Example: Action Series,Drama (Series),Daily Soap (limits series recordings to these genres. If unsure, leave empty.)
+                                    Example: Action Series,Drama (Series),Daily Soap
                                 </div>
                             </div>
                             <div class="inputContainer">
@@ -88,7 +88,7 @@
                                 </div>
                             </div>
                             <div class="inputContainer">
-                                <input is="emby-input" id="txtNewsGenre" name="txtNewsGenre" label="News genres:" />
+                                <input is="emby-input" id="txtNewsGenre" name="txtNewsGenre" label="News or documentary genres:" />
                                 <div class="fieldDescription">
                                     Example: News Report,Daily News
                                 </div>
