--- a/MediaBrowser.Plugins.MediaPortal/web/mediaportal.html
+++ b/MediaBrowser.Plugins.MediaPortal/web/mediaportal.html
@@ -4,13 +4,13 @@
             <div class="verticalSection">
 
                 <div>
-                    <h3 class="typeName">Media Portal</h3>
+                    <h3 class="typeName">MediaPortal</h3>
                 </div>
 
                 <div class="inputContainer fldPath">
                     <div class="flex align-items-center">
                         <div class="flex-grow">
-                            <input is="emby-input" type="text" class="txtDevicePath" label="MP Extended Base Url:" required="required" autocomplete="off" />
+                            <input is="emby-input" type="text" class="txtDevicePath" label="MPExtended base url:" required="required" autocomplete="off" />
                             <div class="fieldDescription">
                                 For example: http://localhost:4322
                             </div>
@@ -34,8 +34,73 @@
                         The password specified in MPExtended - Authentication
                     </div>
                 </div>
+
+                <br />
+
+                <div class="selectContainer">
+                    <select is="emby-select" id="selectTranscoderProfile" data-mini="true" label="MPExtended transcoding profile:"></select>
+                </div>
+
+                <br />
+
+                <div class="selectContainer">
+                    <select is="emby-select" id="selectTvChannelGroup" data-mini="true" label="MediaPortal tv channel group:"></select>
+                </div>
+                <label class="checkboxContainer">
+                    <input is="emby-checkbox" type="checkbox" id="chkImportRadioChannels" />
+                    <span>Import radio channels</span>
+                </label>
+                <div class="selectContainer">
+                    <select is="emby-select" id="selectRadioChannelGroup" data-mini="true" label="MediaPortal radio channel group:"></select>
+                </div>
+
+                <br />
+
+                <div is="emby-collapse" title="Mapping of MediaPortal program guide genres to Emby categories">
+                    <div class="collapseContent">
+                        <div class="inputContainer">
+                            <input is="emby-input" id="txtEducationalGenre" label="Educational program:" />
+                            <div class="fieldDescription">
+                                Example: Documentary|Animals|Travelling
+                            </div>
+                        </div>
+                        <div class="inputContainer">
+                            <input is="emby-input" id="txtKidsGenre" name="txtKidsGenre" label="Kids program:" />
+                            <div class="fieldDescription">
+                                Example: Cartoon|Animation
+                            </div>
+                        </div>
+                        <div class="inputContainer">
+                            <input is="emby-input" id="txtLiveGenre" name="txtLiveGenre" label="Live program:" />
+                            <div class="fieldDescription">
+                                Example: Live Gameshow|Live Sports
+                            </div>
+                        </div>
+                        <div class="inputContainer">
+                            <input is="emby-input" id="txtMovieGenre" label="Movie program:" />
+                            <div class="fieldDescription">
+                                Example: Movie|Film|TV Movie
+                            </div>
+                        </div>
+                        <div class="inputContainer">
+                            <input is="emby-input" id="txtNewsGenre" name="txtNewsGenre" label="News program:" />
+                            <div class="fieldDescription">
+                                Example: News Report|Daily News
+                            </div>
+                        </div>
+                        <div class="inputContainer">
+                            <input is="emby-input" id="txtSportsGenre" name="txtSportsGenre" label="Sports program:" />
+                            <div class="fieldDescription">
+                                Example: Sport|Football
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
+
             <br />
+
             <div>
                 <button is="emby-button" type="submit" class="raised button-submit block">
                     <span>${Save}</span>
